# TestProject

./: CMakeLists.txt
ConsoleApplication1/: ConsoleApplication1.sdf
ConsoleApplication1/ConsoleApplication1/: Main.cpp
ConsoleApplication1/ConsoleApplication1/Debug/: vc120.idb
ConsoleApplication1/ConsoleApplication1/Debug/ConsoleA.0E9AE358.tlog/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.read.1.tlog  link.write.1.tlog
ConsoleApplication1/Debug/: ConsoleApplication1.ilk
src/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj  Main.cpp
src/Debug/ConsoleA.0E9AE358.tlog/: CL.read.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.write.1.tlog
src/TEST/: test.h
